add teh mappings

--- a/data.yml
+++ b/data.yml
@@ -1,7 +1,16 @@
 defaultStorageMapping: WORK
 installedPackages: {}
 jobs: {}
-locations: {}
+locations:
+  SAMPLE:
+    mappingDefinitions: {}
+  SOURCE:
+    mappingDefinitions: {}
+  WORK:
+    mappingDefinitions:
+      "3":
+        database: DAVID_I_EDW
+        schema: PUBLIC
 macros: {}
 packages: {}
 projects: {}
