added even more mappings

--- a/data.yml
+++ b/data.yml
@@ -3,9 +3,15 @@ installedPackages: {}
 jobs: {}
 locations:
   SAMPLE:
-    mappingDefinitions: {}
+    mappingDefinitions:
+      "3":
+        database: DAVID_I_EDW
+        schema: QA_STAGING
   SOURCE:
-    mappingDefinitions: {}
+    mappingDefinitions:
+      "3":
+        database: COALESCE_SAMPLE_DATABASE
+        schema: TPCH_SF001
   WORK:
     mappingDefinitions:
       "3":
