Add new LINEITEM job

--- a/data.yml
+++ b/data.yml
@@ -1,6 +1,13 @@
 defaultStorageMapping: WORK
 installedPackages: {}
-jobs: {}
+jobs:
+  Job-1:
+    excludeSelector: ""
+    id: 1
+    includeSelector: LINEITEM
+    name: Test Edit Job 2
+    steps: []
+    subgraphs: []
 locations:
   SAMPLE:
     mappingDefinitions:
