--- a/nodes/WORK-STG_LINEITEM.yml
+++ b/nodes/WORK-STG_LINEITEM.yml
@@ -236,7 +236,7 @@ steps:
           - columnReference:
               columnCounter: 26bc737e-bcd8-4a7e-a4b9-18c2d7807182
               stepCounter: 2b21ec73-3684-41cd-9604-691ac7b392f8
-            dataType: VARCHAR(44)
+            dataType: PIKAPIKA
             description: ""
             hashColumns: []
             hashDetails: null
