LOWER with no args

--- a/nodes/WORK-STG_LINEITEM.yml
+++ b/nodes/WORK-STG_LINEITEM.yml
@@ -236,7 +236,7 @@ steps:
           - columnReference:
               columnCounter: 26bc737e-bcd8-4a7e-a4b9-18c2d7807182
               stepCounter: 2b21ec73-3684-41cd-9604-691ac7b392f8
-            dataType: PIKAPIKA
+            dataType: VARCHAR(233)
             description: ""
             hashColumns: []
             hashDetails: null
@@ -246,7 +246,7 @@ steps:
               - columnReferences:
                   - columnCounter: 79801612-a8b4-44c8-b850-b792dbb2518f
                     stepCounter: 924167a5-20b1-45b7-b887-64a3b1f7b83f
-                transform: ""
+                transform: LOWER()
         cteString: ""
         enabledColumnTestIDs: []
         sourceMapping:
