Fix bad transform

--- a/nodes/WORK-STG_LINEITEM.yml
+++ b/nodes/WORK-STG_LINEITEM.yml
@@ -246,7 +246,7 @@ steps:
               - columnReferences:
                   - columnCounter: 79801612-a8b4-44c8-b850-b792dbb2518f
                     stepCounter: 924167a5-20b1-45b7-b887-64a3b1f7b83f
-                transform: LOWER()
+                transform: ""
         cteString: ""
         enabledColumnTestIDs: []
         sourceMapping:
