new env who dis

--- a/data.yml
+++ b/data.yml
@@ -14,16 +14,25 @@ locations:
       "3":
         database: DAVID_I_EDW
         schema: QA_STAGING
+      "6":
+        database: DAVID_I_EDW
+        schema: DEV_DATA_MART
   SOURCE:
     mappingDefinitions:
       "3":
         database: COALESCE_SAMPLE_DATABASE
         schema: TPCH_SF001
+      "6":
+        database: DAVID_I_EDW
+        schema: DEV_RAW
   WORK:
     mappingDefinitions:
       "3":
         database: DAVID_I_EDW
         schema: PUBLIC
+      "6":
+        database: DAVID_I_EDW
+        schema: DEV_STAGING
 macros: {}
 packages: {}
 projects: {}
