New node, to merge to other workspace

--- a/data.yml
+++ b/data.yml
@@ -1,4 +1,4 @@
-defaultStorageMapping: WORK
+defaultStorageMapping: BILBO-SMOKE
 installedPackages: {}
 jobs:
   Job-1:
@@ -9,6 +9,14 @@ jobs:
     steps: []
     subgraphs: []
 locations:
+  BILBO-SMOKE:
+    mappingDefinitions:
+      "3":
+        database: ""
+        schema: ""
+      "6":
+        database: ""
+        schema: ""
   SAMPLE:
     mappingDefinitions:
       "3":
