--- a/nodes/WORK-STG_CUSTOMER.yml
+++ b/nodes/WORK-STG_CUSTOMER.yml
@@ -128,6 +128,22 @@ steps:
                   - columnCounter: 5cd20821-b3af-406a-bee6-b259cf4e12b9
                     stepCounter: 2ca0aadc-8f92-4df9-8fee-d7b62e940110
                 transform: ""
+          - acceptedValues:
+              strictMatch: false
+              values: []
+            appliedColumnTests: {}
+            columnReference:
+              columnCounter: fb05ac77-16b1-428d-b0e9-36206ab5dfe7
+              stepCounter: d93c5fd2-0032-40ba-9996-31302f1dd81b
+            dataType: NUMBER(38,0)
+            description: SF*150,000 are populated
+            name: C_CUSTKEY1
+            nullable: false
+            sourceColumnReferences:
+              - columnReferences:
+                  - columnCounter: 611c8027-d486-4486-a036-4819e9f3367d
+                    stepCounter: 2ca0aadc-8f92-4df9-8fee-d7b62e940110
+                transform: ""
         cteString: ""
         enabledColumnTestIDs: []
         sourceMapping:
