--- a/data.yml
+++ b/data.yml
@@ -18,7 +18,7 @@ locations:
     mappingDefinitions:
       "3":
         database: DAVID_I_EDW
-        schema: QA_STAGING_foobar
+        schema: QA_STAGING
   SOURCE:
     mappingDefinitions:
       "3":
