--- a/nodes/DESTINATION-STG_CUSTOMER.yml
+++ b/nodes/DESTINATION-STG_CUSTOMER.yml
@@ -1,5 +1,5 @@
 steps:
-  STG_CUSTOMER-d93c5fd2-0032-40ba-9996-31302f1dd81b:
+  STG_CUSTOMER-2e214032-cc55-4ee9-9d8f-1f121e3d0157:
     operation:
       config:
         insertStrategy: INSERT
@@ -11,14 +11,14 @@ steps:
       deployEnabled: true
       description: ""
       isMultisource: false
-      locationName: WORK
+      locationName: DESTINATION
       materializationType: table
       metadata:
         appliedNodeTests: []
         columns:
           - columnReference:
-              columnCounter: bf3b985f-8a94-4903-a471-cf00c77b07d2
-              stepCounter: d93c5fd2-0032-40ba-9996-31302f1dd81b
+              columnCounter: 92db87d6-b87a-4591-8fc7-64541b6c49c3
+              stepCounter: 2e214032-cc55-4ee9-9d8f-1f121e3d0157
             dataType: NUMBER(38,0)
             description: SF*150,000 are populated
             hashColumns: []
@@ -27,12 +27,12 @@ steps:
             nullable: false
             sourceColumnReferences:
               - columnReferences:
-                  - columnCounter: 611c8027-d486-4486-a036-4819e9f3367d
-                    stepCounter: 2ca0aadc-8f92-4df9-8fee-d7b62e940110
+                  - columnCounter: ebcba116-d899-41eb-ac25-029ed3dd1184
+                    stepCounter: 21d34b53-e6db-411d-950d-cc1eebdc989d
                 transform: ""
           - columnReference:
-              columnCounter: 9baa6bb7-3f2d-4f8a-b605-8591691d9d88
-              stepCounter: d93c5fd2-0032-40ba-9996-31302f1dd81b
+              columnCounter: fbbf0c2b-2532-4f78-b43e-e2bde5b95e77
+              stepCounter: 2e214032-cc55-4ee9-9d8f-1f121e3d0157
             dataType: VARCHAR(25)
             description: ""
             hashColumns: []
@@ -41,12 +41,12 @@ steps:
             nullable: false
             sourceColumnReferences:
               - columnReferences:
-                  - columnCounter: 6c1fb099-cbe7-44ed-9e01-b281c94c2757
-                    stepCounter: 2ca0aadc-8f92-4df9-8fee-d7b62e940110
+                  - columnCounter: 4cea66fd-7904-412f-bb33-7e4eabff1f3f
+                    stepCounter: 21d34b53-e6db-411d-950d-cc1eebdc989d
                 transform: ""
           - columnReference:
-              columnCounter: 3a8f0c5f-aebe-4b64-9834-a10249c134fa
-              stepCounter: d93c5fd2-0032-40ba-9996-31302f1dd81b
+              columnCounter: cc5ec4e3-15fa-4eb9-9ada-af474d5352c4
+              stepCounter: 2e214032-cc55-4ee9-9d8f-1f121e3d0157
             dataType: VARCHAR(40)
             description: ""
             hashColumns: []
@@ -55,12 +55,12 @@ steps:
             nullable: false
             sourceColumnReferences:
               - columnReferences:
-                  - columnCounter: 5ee34a6f-dd5a-41b3-9234-f81a78ad2cd3
-                    stepCounter: 2ca0aadc-8f92-4df9-8fee-d7b62e940110
+                  - columnCounter: 281f2589-0a36-422f-98cf-10b74a185d9c
+                    stepCounter: 21d34b53-e6db-411d-950d-cc1eebdc989d
                 transform: ""
           - columnReference:
-              columnCounter: 3c43b7d9-7fe6-4327-ad91-03deb772eeec
-              stepCounter: d93c5fd2-0032-40ba-9996-31302f1dd81b
+              columnCounter: 2f5eef69-c567-44ba-86fa-34e38271302c
+              stepCounter: 2e214032-cc55-4ee9-9d8f-1f121e3d0157
             dataType: NUMBER(38,0)
             description: Foreign Key to N_NATIONKEY
             hashColumns: []
@@ -69,12 +69,12 @@ steps:
             nullable: false
             sourceColumnReferences:
               - columnReferences:
-                  - columnCounter: e03c33ec-63b6-4084-b56b-3fc9cc374a3f
-                    stepCounter: 2ca0aadc-8f92-4df9-8fee-d7b62e940110
+                  - columnCounter: 77ceb978-ccec-49cb-b6e2-a7ce8b9ba3ec
+                    stepCounter: 21d34b53-e6db-411d-950d-cc1eebdc989d
                 transform: ""
           - columnReference:
-              columnCounter: 3a401e24-0e09-424c-ac5b-a44147a951a5
-              stepCounter: d93c5fd2-0032-40ba-9996-31302f1dd81b
+              columnCounter: 9b73eb2a-6c59-4580-8275-7a0691ec10a0
+              stepCounter: 2e214032-cc55-4ee9-9d8f-1f121e3d0157
             dataType: VARCHAR(15)
             description: ""
             hashColumns: []
@@ -83,12 +83,12 @@ steps:
             nullable: false
             sourceColumnReferences:
               - columnReferences:
-                  - columnCounter: 4f1ab5dc-8ee2-4652-a1af-239a498cb441
-                    stepCounter: 2ca0aadc-8f92-4df9-8fee-d7b62e940110
+                  - columnCounter: a62213cb-d2cd-4cfd-bef6-d7abcb421a88
+                    stepCounter: 21d34b53-e6db-411d-950d-cc1eebdc989d
                 transform: ""
           - columnReference:
-              columnCounter: 21aeb6dc-8b02-4994-87b7-752d36b3fa86
-              stepCounter: d93c5fd2-0032-40ba-9996-31302f1dd81b
+              columnCounter: fc06157a-2eb4-40d9-bf83-e8c4427fb7ee
+              stepCounter: 2e214032-cc55-4ee9-9d8f-1f121e3d0157
             dataType: NUMBER(12,2)
             description: ""
             hashColumns: []
@@ -97,12 +97,12 @@ steps:
             nullable: false
             sourceColumnReferences:
               - columnReferences:
-                  - columnCounter: 17ce785f-24ab-4945-a7ef-3d2ec70c50af
-                    stepCounter: 2ca0aadc-8f92-4df9-8fee-d7b62e940110
+                  - columnCounter: 379d20aa-12e4-477e-97a4-b3dbef5c252e
+                    stepCounter: 21d34b53-e6db-411d-950d-cc1eebdc989d
                 transform: ""
           - columnReference:
-              columnCounter: bacff324-7cd6-4076-ae88-99b1e1af359d
-              stepCounter: d93c5fd2-0032-40ba-9996-31302f1dd81b
+              columnCounter: c3f1d7fa-c981-4912-9434-e204f75aa2ea
+              stepCounter: 2e214032-cc55-4ee9-9d8f-1f121e3d0157
             dataType: VARCHAR(10)
             description: ""
             hashColumns: []
@@ -111,12 +111,12 @@ steps:
             nullable: true
             sourceColumnReferences:
               - columnReferences:
-                  - columnCounter: 5376aba0-47b3-4ad6-9dcc-61a14bc05e86
-                    stepCounter: 2ca0aadc-8f92-4df9-8fee-d7b62e940110
+                  - columnCounter: 9fd17932-384b-4d31-9caf-7565e7b23db8
+                    stepCounter: 21d34b53-e6db-411d-950d-cc1eebdc989d
                 transform: ""
           - columnReference:
-              columnCounter: d8436198-9bd6-4fb1-9647-438f46c141fe
-              stepCounter: d93c5fd2-0032-40ba-9996-31302f1dd81b
+              columnCounter: 27d9d20e-81e3-42ed-bd4c-2bf3afd35fa7
+              stepCounter: 2e214032-cc55-4ee9-9d8f-1f121e3d0157
             dataType: VARCHAR(117)
             description: ""
             hashColumns: []
@@ -125,24 +125,8 @@ steps:
             nullable: true
             sourceColumnReferences:
               - columnReferences:
-                  - columnCounter: 5cd20821-b3af-406a-bee6-b259cf4e12b9
-                    stepCounter: 2ca0aadc-8f92-4df9-8fee-d7b62e940110
-                transform: ""
-          - acceptedValues:
-              strictMatch: false
-              values: []
-            appliedColumnTests: {}
-            columnReference:
-              columnCounter: fb05ac77-16b1-428d-b0e9-36206ab5dfe7
-              stepCounter: d93c5fd2-0032-40ba-9996-31302f1dd81b
-            dataType: NUMBER(38,0)
-            description: SF*150,000 are populated
-            name: C_CUSTKEY1
-            nullable: false
-            sourceColumnReferences:
-              - columnReferences:
-                  - columnCounter: 611c8027-d486-4486-a036-4819e9f3367d
-                    stepCounter: 2ca0aadc-8f92-4df9-8fee-d7b62e940110
+                  - columnCounter: dac16059-bb25-44d7-857a-2a5424b9e1b2
+                    stepCounter: 21d34b53-e6db-411d-950d-cc1eebdc989d
                 transform: ""
         cteString: ""
         enabledColumnTestIDs: []
@@ -162,4 +146,4 @@ steps:
       schema: ""
       sqlType: Stage
       type: sql
-    stepCounter: d93c5fd2-0032-40ba-9996-31302f1dd81b
+    stepCounter: 2e214032-cc55-4ee9-9d8f-1f121e3d0157
