--- a/nodes/DESTINATION-STG_PART.yml
+++ b/nodes/DESTINATION-STG_PART.yml
@@ -1,5 +1,5 @@
 steps:
-  STG_PART-e6f80ce6-cd32-4509-b21a-6b5943d387af:
+  STG_PART-5f11bcbe-e2a1-48a8-b323-6fde18d9008a:
     operation:
       config:
         insertStrategy: INSERT
@@ -11,14 +11,14 @@ steps:
       deployEnabled: true
       description: ""
       isMultisource: false
-      locationName: SAMPLE
+      locationName: DESTINATION
       materializationType: table
       metadata:
         appliedNodeTests: []
         columns:
           - columnReference:
-              columnCounter: d6efb0f5-edce-4145-860a-b00c31de39e3
-              stepCounter: e6f80ce6-cd32-4509-b21a-6b5943d387af
+              columnCounter: 886dd338-7ef7-4ae1-aed5-138c1bed3386
+              stepCounter: 5f11bcbe-e2a1-48a8-b323-6fde18d9008a
             dataType: NUMBER(38,0)
             description: ""
             hashColumns: []
@@ -27,12 +27,12 @@ steps:
             nullable: false
             sourceColumnReferences:
               - columnReferences:
-                  - columnCounter: a68cb0b8-2d2f-4be9-98d1-5c32e7834006
-                    stepCounter: 06994ccd-a951-49f5-b375-cb8be307e9af
+                  - columnCounter: 21b17de8-be75-443a-bf60-b41b987a31f2
+                    stepCounter: 923e5106-26e0-454b-94cd-8c8c4e48b512
                 transform: ""
           - columnReference:
-              columnCounter: 7fb67dd5-5445-45a5-823d-a5d8a752d61d
-              stepCounter: e6f80ce6-cd32-4509-b21a-6b5943d387af
+              columnCounter: a99ea225-3e6e-4eb8-9e0c-f40f9af7693b
+              stepCounter: 5f11bcbe-e2a1-48a8-b323-6fde18d9008a
             dataType: VARCHAR(55)
             description: ""
             hashColumns: []
@@ -41,12 +41,12 @@ steps:
             nullable: false
             sourceColumnReferences:
               - columnReferences:
-                  - columnCounter: f3f53e9c-10d1-4468-839a-bac9ab41ca2c
-                    stepCounter: 06994ccd-a951-49f5-b375-cb8be307e9af
+                  - columnCounter: 2a05ece4-1fe7-4200-9422-12e11085c0b7
+                    stepCounter: 923e5106-26e0-454b-94cd-8c8c4e48b512
                 transform: ""
           - columnReference:
-              columnCounter: 579eca10-e6c2-4163-8759-b83a5777cb1a
-              stepCounter: e6f80ce6-cd32-4509-b21a-6b5943d387af
+              columnCounter: b51247ca-d1b8-4c7d-84e6-9b8701cbe0f2
+              stepCounter: 5f11bcbe-e2a1-48a8-b323-6fde18d9008a
             dataType: VARCHAR(25)
             description: ""
             hashColumns: []
@@ -55,12 +55,12 @@ steps:
             nullable: false
             sourceColumnReferences:
               - columnReferences:
-                  - columnCounter: 58b75cd6-2249-4f39-b87b-18624f5d11fb
-                    stepCounter: 06994ccd-a951-49f5-b375-cb8be307e9af
+                  - columnCounter: 344c1817-5322-4725-a352-7dc5daf62323
+                    stepCounter: 923e5106-26e0-454b-94cd-8c8c4e48b512
                 transform: ""
           - columnReference:
-              columnCounter: 89184d3a-f130-4dcc-9071-44e36a5b0f5c
-              stepCounter: e6f80ce6-cd32-4509-b21a-6b5943d387af
+              columnCounter: 0118d1a4-23a1-4551-9f48-a298cdfaa636
+              stepCounter: 5f11bcbe-e2a1-48a8-b323-6fde18d9008a
             dataType: VARCHAR(10)
             description: ""
             hashColumns: []
@@ -69,12 +69,12 @@ steps:
             nullable: false
             sourceColumnReferences:
               - columnReferences:
-                  - columnCounter: 6dce9adf-26b8-498e-a6a4-2a6825a1d0f7
-                    stepCounter: 06994ccd-a951-49f5-b375-cb8be307e9af
+                  - columnCounter: 64c01915-a67e-4d29-a137-e42ba5b04a06
+                    stepCounter: 923e5106-26e0-454b-94cd-8c8c4e48b512
                 transform: ""
           - columnReference:
-              columnCounter: fd74c3d1-4e78-424e-96f6-91191f485f69
-              stepCounter: e6f80ce6-cd32-4509-b21a-6b5943d387af
+              columnCounter: 28de522a-732a-4bb1-a500-939f8772b13a
+              stepCounter: 5f11bcbe-e2a1-48a8-b323-6fde18d9008a
             dataType: VARCHAR(25)
             description: ""
             hashColumns: []
@@ -83,12 +83,12 @@ steps:
             nullable: false
             sourceColumnReferences:
               - columnReferences:
-                  - columnCounter: 37a514e3-9da8-4664-ae6f-2bf8a5d8dd95
-                    stepCounter: 06994ccd-a951-49f5-b375-cb8be307e9af
+                  - columnCounter: 296680a8-a14f-4bcb-af42-9e11ff9cacc1
+                    stepCounter: 923e5106-26e0-454b-94cd-8c8c4e48b512
                 transform: ""
           - columnReference:
-              columnCounter: aa076389-3995-4341-bcd3-cddb77c16eda
-              stepCounter: e6f80ce6-cd32-4509-b21a-6b5943d387af
+              columnCounter: bf12c2d5-a3e2-418c-9762-4d738ac278fe
+              stepCounter: 5f11bcbe-e2a1-48a8-b323-6fde18d9008a
             dataType: NUMBER(38,0)
             description: ""
             hashColumns: []
@@ -97,12 +97,12 @@ steps:
             nullable: false
             sourceColumnReferences:
               - columnReferences:
-                  - columnCounter: 4a896003-e08a-4eff-a203-6f02d6c60223
-                    stepCounter: 06994ccd-a951-49f5-b375-cb8be307e9af
+                  - columnCounter: 0618cdb1-5bd1-42e8-abd5-ea3068bb8b5b
+                    stepCounter: 923e5106-26e0-454b-94cd-8c8c4e48b512
                 transform: ""
           - columnReference:
-              columnCounter: bab6d7bc-5049-4889-baec-77046528c188
-              stepCounter: e6f80ce6-cd32-4509-b21a-6b5943d387af
+              columnCounter: 9808656a-4852-46c4-aa9e-b3aa16e9d023
+              stepCounter: 5f11bcbe-e2a1-48a8-b323-6fde18d9008a
             dataType: VARCHAR(10)
             description: ""
             hashColumns: []
@@ -111,12 +111,12 @@ steps:
             nullable: false
             sourceColumnReferences:
               - columnReferences:
-                  - columnCounter: 0dfe3f65-d8ac-47d6-b869-45a9ebfcdeb0
-                    stepCounter: 06994ccd-a951-49f5-b375-cb8be307e9af
+                  - columnCounter: a986f6f3-0e6c-44e0-8d3e-9c74c8a8290d
+                    stepCounter: 923e5106-26e0-454b-94cd-8c8c4e48b512
                 transform: ""
           - columnReference:
-              columnCounter: bf8c143e-d8c5-4687-9b2c-45aaaebea22f
-              stepCounter: e6f80ce6-cd32-4509-b21a-6b5943d387af
+              columnCounter: 6a538ee9-253a-4a22-ad12-c31c6486454a
+              stepCounter: 5f11bcbe-e2a1-48a8-b323-6fde18d9008a
             dataType: NUMBER(12,2)
             description: ""
             hashColumns: []
@@ -125,12 +125,12 @@ steps:
             nullable: false
             sourceColumnReferences:
               - columnReferences:
-                  - columnCounter: e2774eac-3eb9-433d-9db9-47cec2d13d03
-                    stepCounter: 06994ccd-a951-49f5-b375-cb8be307e9af
+                  - columnCounter: 64c5086b-eddf-4874-aefd-01e5178071f6
+                    stepCounter: 923e5106-26e0-454b-94cd-8c8c4e48b512
                 transform: ""
           - columnReference:
-              columnCounter: fe095594-99ed-4ff1-be58-47854fe4975e
-              stepCounter: e6f80ce6-cd32-4509-b21a-6b5943d387af
+              columnCounter: e24cf09c-1c26-4df2-a287-198de5af0162
+              stepCounter: 5f11bcbe-e2a1-48a8-b323-6fde18d9008a
             dataType: VARCHAR(23)
             description: ""
             hashColumns: []
@@ -139,8 +139,8 @@ steps:
             nullable: true
             sourceColumnReferences:
               - columnReferences:
-                  - columnCounter: 6b60986c-1ba4-4543-bb83-f236c91dfeca
-                    stepCounter: 06994ccd-a951-49f5-b375-cb8be307e9af
+                  - columnCounter: f8109416-5327-4a77-9555-78b98528beed
+                    stepCounter: 923e5106-26e0-454b-94cd-8c8c4e48b512
                 transform: ""
         cteString: ""
         enabledColumnTestIDs: []
@@ -160,4 +160,4 @@ steps:
       schema: ""
       sqlType: Stage
       type: sql
-    stepCounter: e6f80ce6-cd32-4509-b21a-6b5943d387af
+    stepCounter: 5f11bcbe-e2a1-48a8-b323-6fde18d9008a
