--- a/nodes/DESTINATION-STG_LINEITEM.yml
+++ b/nodes/DESTINATION-STG_LINEITEM.yml
@@ -1,5 +1,5 @@
 steps:
-  STG_LINEITEM-2b21ec73-3684-41cd-9604-691ac7b392f8:
+  STG_LINEITEM-3b84a796-8d35-4ec6-b9f5-db84ab1fa617:
     operation:
       config:
         insertStrategy: INSERT
@@ -11,14 +11,14 @@ steps:
       deployEnabled: true
       description: ""
       isMultisource: false
-      locationName: WORK
+      locationName: DESTINATION
       materializationType: table
       metadata:
         appliedNodeTests: []
         columns:
           - columnReference:
-              columnCounter: 1b1d12c7-5ded-491b-9d06-13cd2cb203df
-              stepCounter: 2b21ec73-3684-41cd-9604-691ac7b392f8
+              columnCounter: 9b66df28-d965-4f4a-bba7-21aeac70529f
+              stepCounter: 3b84a796-8d35-4ec6-b9f5-db84ab1fa617
             dataType: NUMBER(38,0)
             description: Foreign Key to O_ORDERKEY
             hashColumns: []
@@ -27,12 +27,12 @@ steps:
             nullable: false
             sourceColumnReferences:
               - columnReferences:
-                  - columnCounter: a47537dd-1e15-4294-9213-432f4329d53f
-                    stepCounter: 924167a5-20b1-45b7-b887-64a3b1f7b83f
+                  - columnCounter: c38d15a2-c1b4-43eb-ba76-2e1bb1b132c7
+                    stepCounter: a1e0f858-c3ce-4431-b9e6-48e8890d7d01
                 transform: ""
           - columnReference:
-              columnCounter: 11d33c79-f8b6-4d34-89ef-01cfe68fd1f3
-              stepCounter: 2b21ec73-3684-41cd-9604-691ac7b392f8
+              columnCounter: defd10a8-229a-4e68-a7ea-86d7fc48dc26
+              stepCounter: 3b84a796-8d35-4ec6-b9f5-db84ab1fa617
             dataType: NUMBER(38,0)
             description: |-
               Foreign key to P_PARTKEY, first part of the
@@ -44,12 +44,12 @@ steps:
             nullable: false
             sourceColumnReferences:
               - columnReferences:
-                  - columnCounter: cc32deec-713d-4a8f-9c04-1a50e697e471
-                    stepCounter: 924167a5-20b1-45b7-b887-64a3b1f7b83f
+                  - columnCounter: 4dc8f934-4209-47c1-aa1a-a70ade3b8a38
+                    stepCounter: a1e0f858-c3ce-4431-b9e6-48e8890d7d01
                 transform: ""
           - columnReference:
-              columnCounter: 36610690-995c-4c62-a3e6-f1008b4762e7
-              stepCounter: 2b21ec73-3684-41cd-9604-691ac7b392f8
+              columnCounter: d0777b3f-87bb-426b-94bf-fa37e1c24bd8
+              stepCounter: 3b84a796-8d35-4ec6-b9f5-db84ab1fa617
             dataType: NUMBER(38,0)
             description: |-
               Foreign key to S_SUPPKEY, second part of the
@@ -62,12 +62,12 @@ steps:
             nullable: false
             sourceColumnReferences:
               - columnReferences:
-                  - columnCounter: 1531fc0b-037e-47fa-9c47-a49573c53aee
-                    stepCounter: 924167a5-20b1-45b7-b887-64a3b1f7b83f
+                  - columnCounter: a70cc9a4-2bde-4a75-a627-ec777be48f1d
+                    stepCounter: a1e0f858-c3ce-4431-b9e6-48e8890d7d01
                 transform: ""
           - columnReference:
-              columnCounter: 9c6fa3ca-a8c9-4ac3-8824-c3328235fae7
-              stepCounter: 2b21ec73-3684-41cd-9604-691ac7b392f8
+              columnCounter: 23d9e00c-4508-4eb2-9244-f9ef5d352ea9
+              stepCounter: 3b84a796-8d35-4ec6-b9f5-db84ab1fa617
             dataType: NUMBER(38,0)
             description: ""
             hashColumns: []
@@ -76,12 +76,12 @@ steps:
             nullable: false
             sourceColumnReferences:
               - columnReferences:
-                  - columnCounter: d0b5e429-769f-4be3-b15b-04cc61e52f56
-                    stepCounter: 924167a5-20b1-45b7-b887-64a3b1f7b83f
+                  - columnCounter: 7c13be6e-5e2a-421b-85b5-069c4c88240e
+                    stepCounter: a1e0f858-c3ce-4431-b9e6-48e8890d7d01
                 transform: ""
           - columnReference:
-              columnCounter: 510f7a76-851c-4506-908a-7259981e64f4
-              stepCounter: 2b21ec73-3684-41cd-9604-691ac7b392f8
+              columnCounter: ce224cfd-653d-4e6e-80f2-89a9996cbce7
+              stepCounter: 3b84a796-8d35-4ec6-b9f5-db84ab1fa617
             dataType: NUMBER(12,2)
             description: ""
             hashColumns: []
@@ -90,12 +90,12 @@ steps:
             nullable: false
             sourceColumnReferences:
               - columnReferences:
-                  - columnCounter: 08104a71-d498-41c8-9935-5309c9c586e0
-                    stepCounter: 924167a5-20b1-45b7-b887-64a3b1f7b83f
+                  - columnCounter: 1e7159ed-fca9-4c0e-ae5f-a5f10c5dc297
+                    stepCounter: a1e0f858-c3ce-4431-b9e6-48e8890d7d01
                 transform: ""
           - columnReference:
-              columnCounter: 5a47c2b9-6a45-4bfb-824b-e006fec593ec
-              stepCounter: 2b21ec73-3684-41cd-9604-691ac7b392f8
+              columnCounter: bfc02997-7ac4-4836-b524-6955c6a041cb
+              stepCounter: 3b84a796-8d35-4ec6-b9f5-db84ab1fa617
             dataType: NUMBER(12,2)
             description: ""
             hashColumns: []
@@ -104,12 +104,12 @@ steps:
             nullable: false
             sourceColumnReferences:
               - columnReferences:
-                  - columnCounter: 71872cd4-6913-403b-80fe-a4c6e3ed1485
-                    stepCounter: 924167a5-20b1-45b7-b887-64a3b1f7b83f
+                  - columnCounter: 43c48fd6-0cba-4ba7-b786-3f012d5147f3
+                    stepCounter: a1e0f858-c3ce-4431-b9e6-48e8890d7d01
                 transform: ""
           - columnReference:
-              columnCounter: 91172096-0b1e-41e7-a8a8-834dfdd1c433
-              stepCounter: 2b21ec73-3684-41cd-9604-691ac7b392f8
+              columnCounter: 6e55b791-5982-42a1-a7a5-cd15aa4144de
+              stepCounter: 3b84a796-8d35-4ec6-b9f5-db84ab1fa617
             dataType: NUMBER(12,2)
             description: ""
             hashColumns: []
@@ -118,12 +118,12 @@ steps:
             nullable: false
             sourceColumnReferences:
               - columnReferences:
-                  - columnCounter: ebda0c95-64d1-4656-b41b-4e47597e41a2
-                    stepCounter: 924167a5-20b1-45b7-b887-64a3b1f7b83f
+                  - columnCounter: 5ad82859-6526-4b9a-8210-9775a9ca8faf
+                    stepCounter: a1e0f858-c3ce-4431-b9e6-48e8890d7d01
                 transform: ""
           - columnReference:
-              columnCounter: 5d6f041a-ab5d-4c15-966e-775fe6ba3633
-              stepCounter: 2b21ec73-3684-41cd-9604-691ac7b392f8
+              columnCounter: d95f9dab-0475-4824-a394-9870d4fb8a9a
+              stepCounter: 3b84a796-8d35-4ec6-b9f5-db84ab1fa617
             dataType: NUMBER(12,2)
             description: ""
             hashColumns: []
@@ -132,12 +132,12 @@ steps:
             nullable: false
             sourceColumnReferences:
               - columnReferences:
-                  - columnCounter: 384ba579-cede-43ad-bd05-714a61474d90
-                    stepCounter: 924167a5-20b1-45b7-b887-64a3b1f7b83f
+                  - columnCounter: 2368e3b2-ec4f-4ab4-b1da-45d8a075c39e
+                    stepCounter: a1e0f858-c3ce-4431-b9e6-48e8890d7d01
                 transform: ""
           - columnReference:
-              columnCounter: 32d7d3ad-0819-4043-8ea6-286c557275ef
-              stepCounter: 2b21ec73-3684-41cd-9604-691ac7b392f8
+              columnCounter: fcfd584a-f027-4e5c-8a12-69eabeab57f9
+              stepCounter: 3b84a796-8d35-4ec6-b9f5-db84ab1fa617
             dataType: VARCHAR(1)
             description: ""
             hashColumns: []
@@ -146,12 +146,12 @@ steps:
             nullable: false
             sourceColumnReferences:
               - columnReferences:
-                  - columnCounter: 45e28ba1-c786-4747-b16b-066b457c54aa
-                    stepCounter: 924167a5-20b1-45b7-b887-64a3b1f7b83f
+                  - columnCounter: e8d7a8ce-0eb1-4592-af06-a7eea615db2a
+                    stepCounter: a1e0f858-c3ce-4431-b9e6-48e8890d7d01
                 transform: ""
           - columnReference:
-              columnCounter: 5b0c5581-3a84-4007-948f-c5b7827289bb
-              stepCounter: 2b21ec73-3684-41cd-9604-691ac7b392f8
+              columnCounter: cd1b8c36-83e5-432c-b5b8-022ee947b13b
+              stepCounter: 3b84a796-8d35-4ec6-b9f5-db84ab1fa617
             dataType: VARCHAR(1)
             description: ""
             hashColumns: []
@@ -160,12 +160,12 @@ steps:
             nullable: false
             sourceColumnReferences:
               - columnReferences:
-                  - columnCounter: bfa7aa02-a96d-4283-8e48-e23ec0a329a4
-                    stepCounter: 924167a5-20b1-45b7-b887-64a3b1f7b83f
+                  - columnCounter: bc2c4cde-b041-46cb-a195-d5d54999bf47
+                    stepCounter: a1e0f858-c3ce-4431-b9e6-48e8890d7d01
                 transform: ""
           - columnReference:
-              columnCounter: 776d9fad-e5e9-4a1d-896b-1f2aaab00f18
-              stepCounter: 2b21ec73-3684-41cd-9604-691ac7b392f8
+              columnCounter: 0554c5e8-5270-4f3f-b3be-ffa2c6e3bcb7
+              stepCounter: 3b84a796-8d35-4ec6-b9f5-db84ab1fa617
             dataType: DATE
             description: ""
             hashColumns: []
@@ -174,12 +174,12 @@ steps:
             nullable: false
             sourceColumnReferences:
               - columnReferences:
-                  - columnCounter: a700e496-d5d7-4608-9eee-ebfc28b19383
-                    stepCounter: 924167a5-20b1-45b7-b887-64a3b1f7b83f
+                  - columnCounter: 63281835-2455-45fa-aeb0-be3b453ec134
+                    stepCounter: a1e0f858-c3ce-4431-b9e6-48e8890d7d01
                 transform: ""
           - columnReference:
-              columnCounter: 7849f73c-87d0-418b-b51e-83d66ba25dc7
-              stepCounter: 2b21ec73-3684-41cd-9604-691ac7b392f8
+              columnCounter: a919ed20-6f0d-40af-a182-1ad3818311d0
+              stepCounter: 3b84a796-8d35-4ec6-b9f5-db84ab1fa617
             dataType: DATE
             description: ""
             hashColumns: []
@@ -188,12 +188,12 @@ steps:
             nullable: false
             sourceColumnReferences:
               - columnReferences:
-                  - columnCounter: a0549a58-f5bb-492e-bb62-d5797d94229f
-                    stepCounter: 924167a5-20b1-45b7-b887-64a3b1f7b83f
+                  - columnCounter: 954c9bd4-0a97-4911-a574-a03cbe78ffb8
+                    stepCounter: a1e0f858-c3ce-4431-b9e6-48e8890d7d01
                 transform: ""
           - columnReference:
-              columnCounter: 09ceed48-9d12-4742-946e-c42def10ab2a
-              stepCounter: 2b21ec73-3684-41cd-9604-691ac7b392f8
+              columnCounter: f5ce1be7-4e0f-4542-9639-79565f6ecfda
+              stepCounter: 3b84a796-8d35-4ec6-b9f5-db84ab1fa617
             dataType: DATE
             description: ""
             hashColumns: []
@@ -202,12 +202,12 @@ steps:
             nullable: false
             sourceColumnReferences:
               - columnReferences:
-                  - columnCounter: 8d87138b-51e4-409c-b214-6fe8ab25d190
-                    stepCounter: 924167a5-20b1-45b7-b887-64a3b1f7b83f
+                  - columnCounter: c1c4b116-32d3-41ad-b084-2b3f5ce8620a
+                    stepCounter: a1e0f858-c3ce-4431-b9e6-48e8890d7d01
                 transform: ""
           - columnReference:
-              columnCounter: c03652a5-4d19-4ff1-ab01-23dd2624895b
-              stepCounter: 2b21ec73-3684-41cd-9604-691ac7b392f8
+              columnCounter: 93c93865-3133-4ff3-90c8-9e231840f249
+              stepCounter: 3b84a796-8d35-4ec6-b9f5-db84ab1fa617
             dataType: VARCHAR(25)
             description: ""
             hashColumns: []
@@ -216,12 +216,12 @@ steps:
             nullable: false
             sourceColumnReferences:
               - columnReferences:
-                  - columnCounter: 969d6dec-9a90-411f-b465-ba3dcdb140bc
-                    stepCounter: 924167a5-20b1-45b7-b887-64a3b1f7b83f
-                transform: UPPER("L_SHIPINSTRUCT")
+                  - columnCounter: 4617ecad-f598-422c-9761-84b570fb09cd
+                    stepCounter: a1e0f858-c3ce-4431-b9e6-48e8890d7d01
+                transform: ""
           - columnReference:
-              columnCounter: 645efaa9-36b5-4970-a1ec-38fb9f0eab68
-              stepCounter: 2b21ec73-3684-41cd-9604-691ac7b392f8
+              columnCounter: 37f0d5f4-e427-4c5a-93d3-e5678f9cddc7
+              stepCounter: 3b84a796-8d35-4ec6-b9f5-db84ab1fa617
             dataType: VARCHAR(10)
             description: ""
             hashColumns: []
@@ -230,13 +230,13 @@ steps:
             nullable: false
             sourceColumnReferences:
               - columnReferences:
-                  - columnCounter: 08950306-4aeb-49ef-8270-0111d0f41878
-                    stepCounter: 924167a5-20b1-45b7-b887-64a3b1f7b83f
+                  - columnCounter: 5f2e6940-f44d-4241-bb5d-dc394b1c1b6c
+                    stepCounter: a1e0f858-c3ce-4431-b9e6-48e8890d7d01
                 transform: ""
           - columnReference:
-              columnCounter: 26bc737e-bcd8-4a7e-a4b9-18c2d7807182
-              stepCounter: 2b21ec73-3684-41cd-9604-691ac7b392f8
-            dataType: VARCHAR(233)
+              columnCounter: d345a99b-6b64-48de-af2b-94ba99fe0bff
+              stepCounter: 3b84a796-8d35-4ec6-b9f5-db84ab1fa617
+            dataType: VARCHAR(44)
             description: ""
             hashColumns: []
             hashDetails: null
@@ -244,8 +244,8 @@ steps:
             nullable: false
             sourceColumnReferences:
               - columnReferences:
-                  - columnCounter: 79801612-a8b4-44c8-b850-b792dbb2518f
-                    stepCounter: 924167a5-20b1-45b7-b887-64a3b1f7b83f
+                  - columnCounter: 5f39aac1-f77d-4c3a-bf65-b1a6e90be284
+                    stepCounter: a1e0f858-c3ce-4431-b9e6-48e8890d7d01
                 transform: ""
         cteString: ""
         enabledColumnTestIDs: []
@@ -265,4 +265,4 @@ steps:
       schema: ""
       sqlType: Stage
       type: sql
-    stepCounter: 2b21ec73-3684-41cd-9604-691ac7b392f8
+    stepCounter: 3b84a796-8d35-4ec6-b9f5-db84ab1fa617
