shittin and committin

--- a/nodes/DESTINATION-STG_CUSTOMER_FOOBAR.yml
+++ b/nodes/DESTINATION-STG_CUSTOMER_FOOBAR.yml
@@ -9,7 +9,7 @@ steps:
         truncateBefore: true
       database: ""
       deployEnabled: true
-      description: ""
+      description: can I do it?
       isMultisource: false
       locationName: DESTINATION
       materializationType: table
@@ -118,7 +118,7 @@ steps:
               columnCounter: b8bccac1-e34e-4595-a2bc-cfbf9113b7b7
               stepCounter: 2b79db9c-e579-4b37-af87-dddb3a1d563b
             dataType: VARCHAR(117)
-            description: ""
+            description: jeah boiyyyy
             hashColumns: []
             hashDetails: null
             name: C_COMMENT
