--- a/nodes/SOURCE-CUSTOMER.yml
+++ b/nodes/SOURCE-CUSTOMER.yml
@@ -4,7 +4,7 @@ steps:
       database: ""
       dataset: ""
       deployEnabled: true
-      description: ""
+      description: Heck yeah, brother
       locationName: SOURCE
       metadata:
         columns:
@@ -20,21 +20,6 @@ steps:
             defaultValue: ""
             description: SF*150,000 are populated
             name: C_CUSTKEY
-            nullable: false
-            primaryKey: false
-            uniqueKey: false
-          - acceptedValues:
-              strictMatch: true
-              values: []
-            appliedColumnTests: {}
-            columnReference:
-              columnCounter: 4cea66fd-7904-412f-bb33-7e4eabff1f3f
-              stepCounter: 21d34b53-e6db-411d-950d-cc1eebdc989d
-            config: {}
-            dataType: VARCHAR(25)
-            defaultValue: ""
-            description: ""
-            name: C_NAME
             nullable: false
             primaryKey: false
             uniqueKey: false
@@ -126,6 +111,21 @@ steps:
             description: ""
             name: C_COMMENT
             nullable: true
+            primaryKey: false
+            uniqueKey: false
+          - acceptedValues:
+              strictMatch: true
+              values: []
+            appliedColumnTests: {}
+            columnReference:
+              columnCounter: 4cea66fd-7904-412f-bb33-7e4eabff1f3f
+              stepCounter: 21d34b53-e6db-411d-950d-cc1eebdc989d
+            config: {}
+            dataType: VARCHAR(25)
+            defaultValue: ""
+            description: ""
+            name: C_NAME
+            nullable: false
             primaryKey: false
             uniqueKey: false
         join:
