new macro to aggro

--- a/data.yml
+++ b/data.yml
@@ -19,7 +19,10 @@ locations:
       "3":
         database: COALESCE_SAMPLE_DATABASE
         schema: TPCH_SF001
-macros: {}
+macros:
+  Macro-1:
+    id: "1"
+    macroString: foobar
 packages: {}
 projects: {}
 stepTypes:
