--- a/data.yml
+++ b/data.yml
@@ -1,7 +1,17 @@
-defaultStorageMapping: null
+defaultStorageMapping: DESTINATION
 installedPackages: {}
 jobs: {}
-locations: {}
+locations:
+  DESTINATION:
+    mappingDefinitions:
+      "3":
+        database: DAVID_I_EDW
+        schema: STAGING_LOAD_ENVIRONMENT
+  SOURCE:
+    mappingDefinitions:
+      "3":
+        database: COALESCE_SAMPLE_DATABASE
+        schema: TPCH_SF001
 macros: {}
 packages: {}
 projects: {}
